# Computer-Vision

./: README.md
.github/workflows/: cmake.yml
CompVision/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CompVision  CompVision.cpp  CompVision1.cpp  Makefile  cmake_install.cmake
